src/relocations/llvmreloc/jitlink.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const _VCRT_COMPILER_PREPROCESSOR: u32 = 1;
pub const _SAL_VERSION: u32 = 20;
pub const __SAL_H_VERSION: u32 = 180000000;
pub const _USE_DECLSPECS_FOR_SAL: u32 = 0;
pub const _USE_ATTRIBUTES_FOR_SAL: u32 = 0;
pub const _CRT_PACKING: u32 = 8;
pub const _HAS_EXCEPTIONS: u32 = 1;
pub const _STL_LANG: u32 = 0;
pub const _HAS_CXX17: u32 = 0;
pub const _HAS_CXX20: u32 = 0;
pub const _HAS_CXX23: u32 = 0;
pub const _HAS_CXX26: u32 = 0;
pub const _HAS_NODISCARD: u32 = 0;
pub const WCHAR_MIN: u32 = 0;
pub const WCHAR_MAX: u32 = 65535;
pub const WINT_MIN: u32 = 0;
pub const WINT_MAX: u32 = 65535;
pub type va_list = *mut ::std::os::raw::c_char;
unsafe extern "C" {
  pub fn __va_start(arg1: *mut *mut ::std::os::raw::c_char, ...);
}
pub type __vcrt_bool = bool;
pub type wchar_t = ::std::os::raw::c_ushort;
unsafe extern "C" {
  pub fn __security_init_cookie();
}
unsafe extern "C" {
  pub fn __security_check_cookie(_StackCookie: usize);
}
unsafe extern "C" {
  pub fn __report_gsfailure(_StackCookie: usize) -> !;
}
unsafe extern "C" {
  pub static mut __security_cookie: usize;
}
pub type int_least8_t = ::std::os::raw::c_schar;
pub type int_least16_t = ::std::os::raw::c_short;
pub type int_least32_t = ::std::os::raw::c_int;
pub type int_least64_t = ::std::os::raw::c_longlong;
pub type uint_least8_t = ::std::os::raw::c_uchar;
pub type uint_least16_t = ::std::os::raw::c_ushort;
pub type uint_least32_t = ::std::os::raw::c_uint;
pub type uint_least64_t = ::std::os::raw::c_ulonglong;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_int;
pub type int_fast32_t = ::std::os::raw::c_int;
pub type int_fast64_t = ::std::os::raw::c_longlong;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_uint;
pub type uint_fast32_t = ::std::os::raw::c_uint;
pub type uint_fast64_t = ::std::os::raw::c_ulonglong;
pub type intmax_t = ::std::os::raw::c_longlong;
pub type uintmax_t = ::std::os::raw::c_ulonglong;
pub type max_align_t = f64;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AllocBlockSlice {
  pub rwview: usize,
  pub rxview: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of AllocBlockSlice"][::std::mem::size_of::<AllocBlockSlice>() - 16usize];
  ["Alignment of AllocBlockSlice"][::std::mem::align_of::<AllocBlockSlice>() - 8usize];
  ["Offset of field: AllocBlockSlice::rwview"]
    [::std::mem::offset_of!(AllocBlockSlice, rwview) - 0usize];
  ["Offset of field: AllocBlockSlice::rxview"]
    [::std::mem::offset_of!(AllocBlockSlice, rxview) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AllocBlockSlices {
  pub allocs: *mut AllocBlockSlice,
  pub len: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of AllocBlockSlices"][::std::mem::size_of::<AllocBlockSlices>() - 16usize];
  ["Alignment of AllocBlockSlices"][::std::mem::align_of::<AllocBlockSlices>() - 8usize];
  ["Offset of field: AllocBlockSlices::allocs"]
    [::std::mem::offset_of!(AllocBlockSlices, allocs) - 0usize];
  ["Offset of field: AllocBlockSlices::len"]
    [::std::mem::offset_of!(AllocBlockSlices, len) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AllocRequest {
  pub size: usize,
  pub alignment: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of AllocRequest"][::std::mem::size_of::<AllocRequest>() - 16usize];
  ["Alignment of AllocRequest"][::std::mem::align_of::<AllocRequest>() - 8usize];
  ["Offset of field: AllocRequest::size"][::std::mem::offset_of!(AllocRequest, size) - 0usize];
  ["Offset of field: AllocRequest::alignment"]
    [::std::mem::offset_of!(AllocRequest, alignment) - 8usize];
};
pub type ptr_t = ::std::option::Option<
  unsafe extern "C" fn(
    arg1: *mut ::std::os::raw::c_void,
    arg2: *const ::std::os::raw::c_char,
    arg3: usize,
  ) -> usize,
>;
#[doc = " All returned slices MUST refer to a single contiguous allocation.\n allocs[0].rxview is treated as the base address."]
pub type alloc_t = ::std::option::Option<
  unsafe extern "C" fn(
    arg1: *mut ::std::os::raw::c_void,
    arg2: *mut AllocRequest,
    arg3: usize,
  ) -> AllocBlockSlices,
>;
#[doc = " This gives a temporary allocated C-Styled String\n For preservation, clone it into your addresspace"]
pub type error_cb_t = ::std::option::Option<
  unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void, msg: *const ::std::os::raw::c_char),
>;
#[doc = " Frees the descriptor"]
pub type free_t = ::std::option::Option<
  unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void, arg2: AllocBlockSlices),
>;
#[doc = " A method that stores the pointers happily"]
pub type addr_val = ::std::option::Option<
  unsafe extern "C" fn(
    arg1: *mut ::std::os::raw::c_void,
    arg2: *const ::std::os::raw::c_char,
    arg3: usize,
    arg4: u64,
  ),
>;
#[doc = " This is an allocated interface (preferably stack allocated)\n that essentially serves as a VTable for data pointers.\n\n It must be alive until link_consume_linkctx"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RustMemoryInterface {
  pub state: *mut ::std::os::raw::c_void,
  pub getfnPtr: ptr_t,
  pub allocateJIT: alloc_t,
  pub freeJITStructure: free_t,
  pub onError: error_cb_t,
  pub storeAddr: addr_val,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of RustMemoryInterface"][::std::mem::size_of::<RustMemoryInterface>() - 48usize];
  ["Alignment of RustMemoryInterface"][::std::mem::align_of::<RustMemoryInterface>() - 8usize];
  ["Offset of field: RustMemoryInterface::state"]
    [::std::mem::offset_of!(RustMemoryInterface, state) - 0usize];
  ["Offset of field: RustMemoryInterface::getfnPtr"]
    [::std::mem::offset_of!(RustMemoryInterface, getfnPtr) - 8usize];
  ["Offset of field: RustMemoryInterface::allocateJIT"]
    [::std::mem::offset_of!(RustMemoryInterface, allocateJIT) - 16usize];
  ["Offset of field: RustMemoryInterface::freeJITStructure"]
    [::std::mem::offset_of!(RustMemoryInterface, freeJITStructure) - 24usize];
  ["Offset of field: RustMemoryInterface::onError"]
    [::std::mem::offset_of!(RustMemoryInterface, onError) - 32usize];
  ["Offset of field: RustMemoryInterface::storeAddr"]
    [::std::mem::offset_of!(RustMemoryInterface, storeAddr) - 40usize];
};
unsafe extern "C" {
  #[doc = " Create a LinkerContext structure"]
  pub fn create_linkctx(linker: *mut RustMemoryInterface) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
  #[doc = " Free the LinkerContext structure."]
  pub fn free_linkctx(ctx_ptr: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
  #[doc = " Creates a resuable symbolpool"]
  pub fn create_symbolpool() -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
  #[doc = " Frees the associated SymbolPool"]
  pub fn free_symbolpool(symbolpool: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
  #[doc = " Link using the linker created earlier. This automatically frees the ctx_ptr\n so free_linkctx is NOT TO BE CALLED\n\n NonZero int = FAILURE"]
  pub fn link_consume_linkctx(
    ctx_ptr: *mut ::std::os::raw::c_void,
    symbol_pool: *mut ::std::os::raw::c_void,
    data: *const ::std::os::raw::c_char,
    size: usize,
  ) -> ::std::os::raw::c_int;
}
